cira usuario e sessao
