# capter-2/2-rentx/src/routes/specifications.routes.ts
@@ -1,11 +1,12 @@
 import { Router } from 'express';
 
-import { createSpecificationController } from '../modules/cars/useCases/CreateSpecification';
+import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
+import { CreateSpecificationController } from '../modules/cars/useCases/CreateSpecification/CreateSpecificationController';
 
 const specificationRoutes = Router();
+const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+specificationRoutes.use(ensureAuthenticated);
+specificationRoutes.post('/', createSpecificationController.handle);
 
 export { specificationRoutes };
