# capter-2/2-rentx/src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "TentalX Documentation",
+    "title": "Rentx Documentation",
     "description": "This is an API Rent",
     "version": "1.0.0",
     "contact": {
@@ -77,6 +77,70 @@
               }
             }
           }
+      }
+    },
+    "/categories/import": {
+      "post":{
+        "tags": ["Category"],
+        "summary": "Upload a category list file",
+        "description": "Upload a category list file.",
+        "requestBody":{
+          "content":{
+            "multipart/form-data": {
+              "schema": {
+                "type":"object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definations/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists."
+          }
+        }
+      }
+    }
+  },
+  "definations": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type":"string"
+        },
+        "description": {
+          "type":"string"
+        }
       }
     }
   }
